fixed z-index

--- a/contactstyle.css
+++ b/contactstyle.css
@@ -15,7 +15,7 @@ html {
   top: 0px;
   padding-top: 1%;
   color: #777;
-  z-index: 999;
+  z-index: 998;
   background-color:white;
 }
 
@@ -86,9 +86,10 @@ html {
 .divider {
   height: 3px;
   width: 100%;
+  position: fixed;
   background-color: #ffe0f8;
   margin-top: 200px;
-  z-index: 8;
+  z-index: 999;
 }
 
 h1 {
